TestSuite/errors/err0233.pas
function f1(b:byte):byte; begin end;

begin
  var f := f1.ToString;
end.